<resources>
    <string name="app_name">Prototype</string>
    <string name="bottom_menu_item_1">Downloads</string>
    <string name="bottom_menu_item_2">Finished</string>
    <string name="settings_menu">Settings</string>
    <string name="help_menu">Help</string>

    <string name="title_activity_new_download">New Download</string>
    <string name="join_room_button_label">Join a room</string>
    <string name="create_room_button_label">Create a room</string>
    <string name="room_action_description">Choose an option</string>

    <string name="new_download_placeholder_description">Create a new room to initiate a new download, or join an already created room to participate in a shared download.</string>
    <string name="create_or_join_a_room">Create or join a room</string>

    <string name="qr_code_image_viewer">QR Code image viewer</string>

    <string name="launch_room_description">Launch room with download link</string>
    <string name="url_input_description">URL</string>
    <string name="url_label">URL</string>
    <string name="download_name_label">Label</string>
    <string name="download_name_input_description">Label</string>
    <string name="launch_room">Launch room</string>
    <string name="invalid_unreachable_url">Invalid or unreachable URL</string>
    <string name="partial_download_unsupported">This URL doesn\'t support partial downloads</string>
    <string name="partial_download_supported">This URL supports partial downloads</string>
    <string name="title_activity_room">RoomActivity</string>

    <string name="Room">Room</string>
    <string name="room_view_room">View Room</string>
    <string name="share_room">Share Room</string>
    <string name="room_members">Members</string>
    <string name="room_sync">sync</string>
    <string name="kick_member">Kick member</string>
    <string name="join_a_room">Join a Room</string>
    <string name="non_empty_room_name_required">Room name can not be empty</string>

    <string name="downloads_name_text">Name</string>
    <string name="downloads_status_text">Status</string>
    <string name="downloads_size_text">Size</string>
    <string name="downloads_percentage_text">Percentage</string>

    <string name="download_status">Downloading</string>
    <string name="downloads_status_completed">Completed</string>

    <string name="toggle_button_text">ToggleButton</string>
    <string name="pause_text">PAUSE</string>
    <string name="resume_text">RESUME</string>

    <string name="stop_button_text">STOP</string>

    <string name="downloads_percent_initial">00</string>

    <string name="share_files">Share Files</string>
    <string name="wifi_ssid_and_passphrase">WiFi SSID and Passphrase</string>
    <string name="waiting_for_device">Waiting For Device</string>
    <string name="progress">Progress</string>
    <string name="share">Share</string>
    <string name="new_room">New Room</string>
    <string name="join_room">Join Room</string>
    <string name="please_share_qr">Please share the QR Code with the other device</string>
    <string name="start_sync">Start Sync</string>
    <string name="syncing">Syncing</string>
    <string name="syncing_dot_dot">Syncing...</string>
    <string name="sharing_sync_info">Sharing sync info</string>
    <string name="all_complete">All complete</string>
    <string name="done">Done</string>
    <string name="receive_file">Receive file</string>
</resources>