<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.NewDownloadActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/new_download_subpage_container"
            android:name="com.nevilleantony.prototype.fragments.CreateOrJoinSubpage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3">

        </androidx.fragment.app.FragmentContainerView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="7"
            android:background="@drawable/room_action_sheet_shape"
            android:elevation="2dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:singleLine="false"
                android:text="@string/room_action_description"
                android:textAlignment="center"
                android:textSize="22sp"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/new_download_toggle_button_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:selectionRequired="true"
                app:singleSelection="true">

                <Button
                    android:id="@+id/create_room_button"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/create_room_button_label"
                    app:strokeColor="@drawable/room_action_button_style_stroke_selector" />

                <Button
                    android:id="@+id/join_room_button"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/join_room_button_label"
                    app:strokeColor="@drawable/room_action_button_style_stroke_selector" />

            </com.google.android.material.button.MaterialButtonToggleGroup>

        </LinearLayout>

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>